move the Analytics link from the user drop-down to the org drop-down
Since the analytics are per-org.

--- a/templates/base.html
+++ b/templates/base.html
@@ -111,9 +111,14 @@
               </a>
               <ul class="dropdown-menu">
                 <li><a href="/">Home</a></li>
-                {% if user.can_see_org_settings %}
+                {% if user.can_see_org_settings or user.is_staff %}
                   <li role="separator" class="divider"></li>
+                {% endif %}
+                {% if user.can_see_org_settings %}
                   <li><a href="{{request.organization.get_organization_project.get_absolute_url}}">Organization Settings</a></li>
+                {% endif %}
+                {% if user.is_staff %}
+                  <li><a href="{% url "guidedmodules_analytics" %}">Analytics</a></li>
                 {% endif %}
               </ul>
             </li>
@@ -132,10 +137,6 @@
               <ul class="dropdown-menu">
                 {% if user.user_settings_task %}
                   <li><a href="{{user.user_settings_task.get_absolute_url}}">Account Settings</a></li>
-                {% endif %}
-                {% if user.is_staff %}
-                  <li role="separator" class="divider"></li>
-                  <li><a href="{% url "guidedmodules_analytics" %}">Analytics</a></li>
                 {% endif %}
                 <li role="separator" class="divider"></li>
                 <li><a href="{% url "account_logout" %}">Log Out</a></li>
