missing breadcrumbs on some pages

--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -23,6 +23,10 @@ table .detail {
 </style>
 {% endblock %}
 
+{% block breadcrumbs %}
+<li>Analytics</li>
+{% endblock %}
+
 {% block body %}
 
 	<h1>Analytics</h1>
