--- a/templates/new-project.html
+++ b/templates/new-project.html
@@ -5,6 +5,10 @@
 Add System
 {% endblock %}
 
+{% block breadcrumbs %}
+<li>New System</li>
+{% endblock %}
+
 {% block body %}
 <div class="row">
   <div class="col-sm-push-1 col-sm-9">
