re-work the home page to be about the organization rather than about the user
The page was user-focused by being about their projects (and the now-removed account settings link). Its title was Systems. The title is now the name of the organization and the breadcrumbs are hidden because the text would be redundant and this is the root of the page hierarchy.

--- a/templates/base.html
+++ b/templates/base.html
@@ -186,6 +186,7 @@
       </div><!-- /.container-fluid -->
     </nav>
 
+    {% block contextbar %}
     <div id="context-bar">
     <div class="container">
     <ol class="breadcrumb">
@@ -211,6 +212,7 @@
     </ol> <!-- .breadcrumb -->
     </div><!-- container -->
     </div><!-- div wrapper -->
+    {% endblock %}
 
     {% if messages %}
     <div class="container" style="margin-top: 1em;">
