rename 'System' to 'Project/System' since not all projects are about unique systems

--- a/templates/home.html
+++ b/templates/home.html
@@ -62,7 +62,7 @@ Home
     <div id="projects">
 
 <div style="text-align: right; margin-bottom: 1em">
-  <a id="new-project" href="/new-project" class="btn btn-success"><i class="glyphicon glyphicon-plus"></i> New System</a>
+  <a id="new-project" href="/new-project" class="btn btn-success"><i class="glyphicon glyphicon-plus"></i> New Project/System</a>
 </div>
 
 <!-- List projects -->
