fix the breadcrumbs not showing up on project pages due to a conflict with the GovReady dashboard integration
The remote CSS that's coming in via the dashboard integration is breaking our css. See https://github.com/GovReady/govready-q-ssp-module/blob/master/modules/project.yaml#L127.

--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
         <link rel="stylesheet" href="{% static "vendor/google-fonts.css" %}">
         <style>
             body {
-                padding-top: 50px;
+                padding-top: 50px !important; /* the !important is to fix a bug with the dashboard integration, remove it eventually */
                 padding-bottom: 20px;
                 overflow-y: scroll;
                 font-family: 'Hind', sans-serif;
