on the project page, for finished tasks change the link text from Done to View since a link should be more like a verb

--- a/templates/project.html
+++ b/templates/project.html
@@ -174,7 +174,7 @@ span.glyphicon.glyphicon-check {
                             <a href="{{t.get_absolute_url}}">
                             {% if t.is_finished %}
                                 <span class="glyphicon glyphicon-check"></span>
-                                Done
+                                View
                             {% elif t.is_started %}
                                 <span class="glyphicon glyphicon-edit"></span>
                               Continue
