--- a/templates/question.html
+++ b/templates/question.html
@@ -382,16 +382,7 @@ label:hover .onhover { display: inline; }
       <ul>
       {% if context %}
         <p>Progress:</p>
-        {% for q in context %}
-          <li class="{{q.class}}">
-            {% if q.class == 'this' %}<span class="glyphicon glyphicon-play-circle"> </span>
-            {% elif q.answered %}<a href="?q={{q.key}}"><span class="glyphicon glyphicon-check"> </span>
-            {% else %}<span class="glyphicon glyphicon-unchecked"> </span>
-            {% endif %}
-            {{q.title}}
-            {% if q.class != 'this' and q.answered %}</a>{% endif %}
-          </li>
-        {% endfor %}
+        {% include "task-progress-question-list.html" %}
         <div style="font-size: 10px; line-height: 120%; padding-left: 2em; color: #222;">
         <li>&middot;</li>
         <li>&middot;</li>
