--- a/templates/project.html
+++ b/templates/project.html
@@ -175,7 +175,7 @@ span.glyphicon.glyphicon-check {
               role="tab" data-toggle="tab">
               {{tab.title}}
               {% if tab.unfinished_tasks > 0 %}
-                <span class="label label-primary">{{tab.unfinished_tasks}} in progress</span>
+                <span class="label label-primary">{{tab.unfinished_tasks}}</span>
               {% endif %}
             </a>
         </li>
