change the button text for external-function questions to Go
It alternated between Next/Update depending on whether this was a new question or visiting a previously answered question. But in designing IssuePacks it becomes clear that having stable button text is helpful for describing what will happen when the users clicks the button.

--- a/templates/question.html
+++ b/templates/question.html
@@ -307,10 +307,14 @@ label:hover .onhover { display: inline; }
               onclick="$('#question > form input[name=method]').val('save')">
               {% if q.spec.type == "interstitial" %}
                 Got it
+              {% elif q.spec.type == "external-function" %}
+                {# function might be fetching external information or taking an action like submitting content to an existing system #}
+                Go
               {% elif not request.GET.q %}
                 {# user is proceeding through the questions in order #}
                 Next
               {% else %}
+                {# user is visiting a specific question #}
                 Update
               {% endif %}
               &raquo;
