--- a/templates/question.html
+++ b/templates/question.html
@@ -48,6 +48,12 @@ label:hover .onhover { display: inline; }
 
 <div class="row">
   <div class="col-sm-8">
+    {% if previous_page_type == "project" or previous_page_type == "nquestion" %}
+      <p><em>Please complete the next question to make progress on this module...</em></p>
+    {% elif previous_page_type == "parent" %}
+      <p><em>You&rsquo;ve begun a new {{m.title}} module. You will return to the previous module when you finish this one.</em></p>
+    {% endif %}
+
     {% include "task-header.html" with col_width="4" col_active=header_col_active %}
   </div>
 </div>
@@ -386,7 +392,7 @@ label:hover .onhover { display: inline; }
       <ul>
       {% if context %}
         <p>Progress:</p>
-        {% include "task-progress-question-list.html" %}
+        {% include "task-progress-question-list.html" with previous="question" %}
         <div style="font-size: 10px; line-height: 120%; padding-left: 2em; color: #222;">
         <li>&middot;</li>
         <li>&middot;</li>
