--- a/templates/task-progress-question-list.html
+++ b/templates/task-progress-question-list.html
@@ -1,6 +1,6 @@
 {% for q in context %}
   <li class="{% if q.is_this_question %}this{% else %}other{% endif %}">
-    {% if not q.is_this_question and q.can_link %}<a href="?q={{q.key}}">{% endif %}
+    {% if not q.is_this_question and q.can_link %}<a href="?q={{q.key}}&previous={{previous|urlencode}}">{% endif %}
 
     {% if q.is_this_question  %}<span class="glyphicon glyphicon-play-circle"> </span>
     {% elif q.answered %}<span class="glyphicon glyphicon-check"> </span>
