fix css on breadcrubs to be more like bootstrap wants

--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -24,7 +24,7 @@ table .detail {
 {% endblock %}
 
 {% block breadcrumbs %}
-<li>Analytics</li>
+<li class="active">Analytics</li>
 {% endblock %}
 
 {% block body %}
