--- a/templates/base.html
+++ b/templates/base.html
@@ -58,6 +58,9 @@
                 margin: 0; padding: 0; background: none;
                 cursor: default;
               }
+              #context-bar .breadcrumb a {
+                color: #777;
+              }
             .glyphicon-book { color: #888; }
             .glyphicon-globe { color: #888; }
             .glyphicon-plus { color: #FFF; }
