--- a/templates/invitation.html
+++ b/templates/invitation.html
@@ -12,7 +12,7 @@ h1 { margin-top: 0; }
 {% endblock %}
 
 {% block breadcrumbs %}
-<li>Invitation</li>
+<li class="active">Invitation</li>
 {% endblock %}
 
 {% block body %}
