--- a/templates/new-project.html
+++ b/templates/new-project.html
@@ -6,7 +6,7 @@ Add System
 {% endblock %}
 
 {% block breadcrumbs %}
-<li>New Project/System</li>
+<li class="active">New Project/System</li>
 {% endblock %}
 
 {% block body %}
