--- a/templates/project_list.html
+++ b/templates/project_list.html
@@ -5,9 +5,7 @@ Home
 {% endblock %}
 
 {% block breadcrumbs %}
-<li>
-  Projects/Systems
-</li>
+<li class="active">Projects/Systems</li>
 {% endblock %}
 
 {% block head %}
