--- a/templates/task-breadcrumbs.html
+++ b/templates/task-breadcrumbs.html
@@ -1,9 +1,9 @@
 <li>
 	<a href="{{task.project.get_absolute_url}}">
-	  <span class="glyphicon glyphicon-hdd" style="color:rgb(19,144,50)"></span>
-	  <span style="color: black;">{{task.project.title}}</span>
+	  <span class="glyphicon glyphicon-hdd" style="color:rgb(40,125,60); margin-right: .25em"></span>
+	  {{task.project.title}}
 	</a>
 </li>
-<li>
+<li class="active">
 	{{task.title}}
 </li>
